--- a/client/main.html
+++ b/client/main.html
@@ -3,20 +3,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>MDef</title>
+    <title>pfinder</title>
     <base href="/">
 </head>
 
-<body ng-app="mDef" ng-cloak>
+<body>
+<pfinder>
+    <navigation></navigation>
+    <main ui-view=""></main>
+</pfinder>
 
-<navigation></navigation>
-<main ui-view=""></main>
 
-<footer class="page-footer teal">
-    <div class="footer-copyright">
-        <div class="container">
-            Made by Lukas Nydegger
-        </div>
-    </div>
-</footer>
 </body>
