--- a/client/main.html
+++ b/client/main.html
@@ -3,7 +3,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>pfinder</title>
+    <title>Personal Finder</title>
+    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
+
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <base href="/">
 </head>
 
